--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TalkListActivity"
+            android:name=".TalkActivity"
             android:label="@string/title_activity_tasks" >
         </activity>
     </application>
