Add toolbar to TalkActivity
Toolbar background color is dynamic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity
             android:name=".TalkActivity"
             android:label="@string/title_activity_tasks" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.codegram.conferences.fullstackfest.ListActivity" />
         </activity>
     </application>
 
