Try to add speaker pictures
Currently buggy, sizes keep changing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'it.neokree:MaterialNavigationDrawer:1.3'
+    compile 'com.makeramen:roundedimageview:1.5.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
 }
