--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.makeramen:roundedimageview:1.5.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
 }
