--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.makeramen:roundedimageview:1.5.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile 'org.markdownj:markdownj-core:0.4'
 }
