--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/maps_api_key"/>
 
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="3b98ce5b0b5c8e5c5d5ca35a955e5e5131c3ef49" /> <!-- TODO: CHANGE BEFORE RELEASE! -->
+
         <activity
             android:name=".ListActivity"
             android:label="@string/app_name" >
@@ -42,9 +46,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.codegram.conferences.fullstackfest.ListActivity" />
         </activity>
-        <meta-data
-            android:name="com.crashlytics.ApiKey"
-            android:value="@string/crashlytics_api_key" />
     </application>
 
 </manifest>
