--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/FullStackFest" >
+        android:theme="@style/FullStackFest2"
+        >
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -32,7 +33,8 @@
 
         <activity
             android:name=".ListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/FullStackFest" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
