--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     compile 'it.neokree:MaterialNavigationDrawer:1.3.2'
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.makeramen:roundedimageview:1.5.0'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'org.markdownj:markdownj-core:0.4'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
