--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'org.markdownj:markdownj-core:0.4'
+    compile 'com.google.android.gms:play-services-maps:7.0.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
         transitive = true;
     }
